OpenJDK 16+ compat: add wrapper.conf argument to allow access to internal openjdk modules